--- a/api/locales/ka/translation.json
+++ b/api/locales/ka/translation.json
@@ -1,6 +1,23 @@
 {
-  "title": "წიგნის მაღაზია",
-  "emailAndUsernameRequired": "ლოგინი და პაროლი სავალდებულოა",
-  "incorrectCredentials": "არასწორი მონაცემები",
-  "required_field": "სავალდებულო ველი"
+  "validations": {
+    "required_field": "აუცილებელი ველი",
+    "emailAndUsernameRequired": "ლოგინი და პაროლი სავალდებულოა",
+    "incorrectCredentials": "არასწორი მონაცემები",
+    "income_field_required": "შემოსავლის ველი სავალდებულოა",
+    "title_en_field_required": "ინგლისური სათაურის ველი სავალდებულოა",
+    "title_ka_field_required": "ქართული სათაურის ველი სავალდებულოა",
+    "poster_field_required": "პოსტერის ველი აუცილებელია",
+    "releaseYear_field_required": "გამოშვების წლის ველი აუცილებელია"
+  },
+  "errors": {
+    "Something went very wrong!": "რაღაც ძალიან ცუდად მოხდა!",
+    "You are not logged in! Please log in to get access.": "თქვენ არ ხართ ავტორიზებული! გაიარეთ ავტორიზაცია წვდომის მისაღებად."
+  },
+  "tokens": {
+    "Invalid token. Please log in again!": "არავალიდური ტოკენი. გთხოვთ, გაიაროთ ავტორიზაცია!",
+    "Your token has expired! Please log in again.": "თქვენს ტოკენს ვადა გაუვიდა. გთხოვთ, გაიაროთ ავტორიზაცია."
+  },
+  "Invalid input data. {{errors}}": "არასწორი მონაცემები. {{errors}}",
+  "Duplicate field value: {{value}}. Please use another value!": "დუბლირებული ველი: {{value}}. გთხოვთ გამოიყენოთ სხვა მნიშვნელობა!",
+  "Invalid {{path}}: {{value}}.": "არასწორია {{path}}: {{value}}."
 }
