feat: crud of movies

--- a/api/locales/en/translation.json
+++ b/api/locales/en/translation.json
@@ -11,11 +11,17 @@
     "title_en_field_required": "English title field is required",
     "title_ka_field_required": "Georgian title field is required",
     "poster_field_required": "Poster field is required",
-    "releaseYear_field_required": "Release year field is required"
+    "releaseYear_field_required": "Release year field is required",
+    "genreIds_field_required": "Genre field is required",
+    "description_en_field_required": "English description field is required",
+    "description_ka_field_required": "Georgian description field is required",
+    "director_en_field_required": "English director field is required",
+    "director_ka_field_required": "Georgian director field is required"
   },
   "errors": {
     "Something went very wrong!": "Something went very wrong!",
-    "You are not logged in! Please log in to get access.": "You are not logged in! Please log in to get access."
+    "You are not logged in! Please log in to get access.": "You are not logged in! Please log in to get access.",
+    "No movie found with that ID": "No movie found with that ID"
   },
   "Invalid input data. {{errors}}": "Invalid input data. {{errors}}",
   "Duplicate field value: {{value}}. Please use another value!": "Duplicate field value: {{value}}. Please use another value!",
