--- a/api/locales/ka/translation.json
+++ b/api/locales/ka/translation.json
@@ -7,11 +7,17 @@
     "title_en_field_required": "ინგლისური სათაურის ველი სავალდებულოა",
     "title_ka_field_required": "ქართული სათაურის ველი სავალდებულოა",
     "poster_field_required": "პოსტერის ველი აუცილებელია",
-    "releaseYear_field_required": "გამოშვების წლის ველი აუცილებელია"
+    "releaseYear_field_required": "გამოშვების წლის ველი აუცილებელია",
+    "genreIds_field_required": "ჟანრის ველი სავალდებულოა",
+    "description_en_field_required": "ინგლისური აღწერის ველი სავალდებულოა",
+    "description_ka_field_required": "ქართული აღწერის ველი სავალდებულოა",
+    "director_en_field_required": "ინგლისური რეჟისორის ველი სავალდებულია",
+    "director_ka_field_required": "ქართული რეჟისორის ველი სავალდებულია"
   },
   "errors": {
     "Something went very wrong!": "რაღაც ძალიან ცუდად მოხდა!",
-    "You are not logged in! Please log in to get access.": "თქვენ არ ხართ ავტორიზებული! გაიარეთ ავტორიზაცია წვდომის მისაღებად."
+    "You are not logged in! Please log in to get access.": "თქვენ არ ხართ ავტორიზებული! გაიარეთ ავტორიზაცია წვდომის მისაღებად.",
+    "No movie found with that ID": "ასეთი ფილმი არ მოიძებნა"
   },
   "tokens": {
     "Invalid token. Please log in again!": "არავალიდური ტოკენი. გთხოვთ, გაიაროთ ავტორიზაცია!",
