feat: add quote like functionality

--- a/api/locales/en/translation.json
+++ b/api/locales/en/translation.json
@@ -31,7 +31,8 @@
     "No movie found with that ID": "No movie found with that ID",
     "No quote found with that ID": "No quote found with that ID",
     "You are not allowed to edit this comment": "You are not allowed to edit this comment",
-    "No comment found with that ID": "No comment found with that ID"
+    "No comment found with that ID": "No comment found with that ID",
+    "You already liked this quote": "You already liked this quote"
   },
   "Invalid input data. {{errors}}": "Invalid input data. {{errors}}",
   "Duplicate field value: {{value}}. Please use another value!": "Duplicate field value: {{value}}. Please use another value!",
